[package]

name = "vs-game-rust"
version = "0.0.0"
authors = [
    "Benjamin <bstreb@gmail.com>"
]

[[bin]]
name = "vs-game-rust"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies.piston2d-sprite]
git = "https://github.com/pistondevelopers/sprite"
